<resources>
    <string name="app_name">Cuan</string>
    <string name="film_name">Film Name</string>
    <string name="detail">Detail</string>
    <string name="content_text">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4. We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series.</string>
    <string name="content_specs_display">5.0 inches\n
    FHD AMOLED at 441ppi\n
    2.5D Corning® Gorilla® Glass 4</string>
    <string name="content_specs_size">5.6 x 2.7 x 0.2 ~ 0.3 inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="content_specs_battery">2,770 mAh battery\n
    Standby time (LTE): up to 19 days\n
    Talk time (3g/WCDMA): up to 26 hours\n
    Internet use time (Wi-Fi): up to 13 hours\n
    Internet use time (LTE): up to 13 hours\n
    Video playback: up to 13 hours\n
    Audio playback (via headset): up to 110 hours\n
    Fast charging: up to 7 hours of use from only 15 minutes of charging</string>
    <string name="stock">Stock hanya 5 buah</string>
    <string name="specification">Spesifikasi</string>
    <string name="display">Display</string>
    <string name="size">Size</string>
    <string name="battery">Battery</string>
    <string name="seller">Dijual oleh</string>
    <string name="my_name">Narenda Wicaksono</string>
    <string name="buy">Beli</string>
    <string name="dummy_value">$735</string>
    <string name="dummy_photos">6 photos</string>
    <string name="overview">Overview</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="lorem">lorem ipsum blagador</string>
    <string name="language">Language</string>
    <string name="price">Current Price</string>
    <string name="popularity">Popularity</string>
    <string name="release_date">Release Date</string>
    <string name="vote_avg">Vote Avg</string>
    <string name="vote_count">Vote Count</string>
    <string name="more_film">More Film</string>
    <string name="description">Description</string>
    <string name="total_supply">Circulate Supply</string>
    <string name="max_supply">Max Supply</string>
    <string name="zero">0.0</string>
    <string name="rank">Market Rank</string>
    <string name="about_me">About Me</string>
    <string name="about_project">About Project</string>
    <string name="description_about_me">Experienced Front End Developer and Mobile Developer. Skilled in Kotlin. Strong engineering professional with a Bachelor’s Degree focused in Computer Science from Universitas Pamulang.</string>
    <string name="made">The app is made for submission simple app project</string>
    <string name="repository">Repository</string>
    <string name="api">Api</string>
    <string name="link_repo">\n<a href="https://learntodroid.com">Github</a></string>
    <string name="link_api">\n<a href="https://www.coingecko.com/api/documentations/v3">CoinGecko</a></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>