<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BgDefault"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/BgDefault"
            android:paddingBottom="20dp"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/img_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_launcher_round" />
                <ImageView
                    android:id="@+id/img_foreground"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_launcher_round" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow"
                android:layout_margin="3dp"
                >
                <TextView
                    android:id="@+id/tv_title"
                    style="@style/TextContent.Title"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/colorSubtitle"
                    android:text="@string/dummy_value"
                    android:textSize="32sp" />
            </FrameLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow"
                android:layout_margin="3dp"
                android:padding="15dp"
                >
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        style="@style/TextSpec.Value"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_bold"
                        android:textAlignment="center"
                        android:text="@string/language"
                        android:layout_marginBottom="14sp"
                        android:textColor="@color/colorSubtitle"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        style="@style/TextSpec.Value"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_bold"
                        android:textAlignment="center"
                        android:text="@string/popularity"
                        android:textColor="@color/colorSubtitle"
                        />
                    <TextView
                        android:textColor="@color/colorSubtitle"
                        android:layout_width="match_parent"
                        style="@style/TextSpec.Value"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_bold"
                        android:textAlignment="center"
                        android:text="@string/release_date" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:id="@+id/tv_lang"
                        android:layout_width="wrap_content"
                        style="@style/TextSpec.Value"
                        android:textAlignment="center"
                        android:text="@string/battery" />
                    />
                    <TextView
                        android:id="@+id/tv_popularity"
                        android:layout_width="wrap_content"
                        style="@style/TextSpec.Value"
                        android:textAlignment="center"
                        android:text="@string/battery" />
                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="wrap_content"
                        style="@style/TextSpec.Value"
                        android:textAlignment="center"
                        android:text="@string/battery" />
                </TableRow>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">
                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/pieChart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />
                </LinearLayout>
            </TableLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow"
                android:layout_margin="3dp"
                android:orientation="vertical"
                >

                <TextView
                    style="@style/TextContent.Subtitle"
                    android:layout_marginVertical="16dp"
                    android:lineSpacingMultiplier="1"
                    android:text="@string/sinopsis"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_detail"
                    style="@style/TextContent.Subtitle"
                    android:textSize="14sp"
                    android:layout_marginBottom="16dp"
                    android:lineSpacingMultiplier="1"
                    android:text="@string/content_text"
                    />
            </LinearLayout>
                <TextView
                    style="@style/TextContent.Subtitle"
                    android:layout_marginVertical="16dp"
                    android:lineSpacingMultiplier="1"
                    android:text="@string/more_film"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="16sp" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_film_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/item_card_vertical"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        />

        </LinearLayout>
    </ScrollView>


</LinearLayout>